# cpglock

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  cpglockd.c  cpglockdump.c  daemon_init.c  daemon_init.h  libcpglock.c  project.config  sock.c
doc/: Makefile.am
doc/man8/: cpglockd.8
lib/: .gitignore  Makefile.am  cpglock-internal.h  cpglock.h  cpglock_util.c  cpglock_util.h  libcpglock.c  libcpglock.pc.in  sock.c  sock.h
test/: .gitignore  Makefile.am  lockstress.c  locktest.c  many.c  many2.c  thread.c  thread2.c  try.c
